syntax = "proto3";

package production;
option go_package = "./production";

service ProductionService {
  rpc Views(ViewsReq) returns(ViewsResp);
  rpc CarInfo(CarInfoReq) returns(CarInfoResp);
}

message ViewsReq {}

message ViewsResp {
  repeated ProdView prod_views = 1;
}

message ProdView {
  int64 id = 1;
  string name = 2;
  string category = 3;
  int64 created_at = 4;
  int64 updated_at = 5;
}

message CarInfoReq {
  int64 car_id = 1;
}

message CarInfoResp {
  int64 prod_id = 1;
  int64 id = 2;
  string category = 3;
  string type = 4;
  string series = 5;
  string name = 6;
  int64 created_at = 7;
  int64 updated_at = 8;
}
